Commit XingYi's changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">teamproject</string>
+    <string name="app_name">inSITe</string>
+    <string name="title_section1">Pending</string>
+    <string name="title_section2">Resolved</string>
+    <string name="title_section3">Section 3</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
