--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,9 @@
     <string name="app_name">inSITe</string>
     <string name="title_section1">Pending</string>
     <string name="title_section2">Resolved</string>
-    <string name="title_section3">Section 3</string>
+    <string name="btn_issue">Raise Issue</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_camera">CameraActivity</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
