--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,17 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_camera">CameraActivity</string>
+    <!-- YC String definitons -->
+    <string name = "hint_report_issue_Name">Name</string>
+    <string name="hint_report_issue_Location">Location</string>
+    <string name="label_report_issue_urgency">Urgency Level</string>
+    <string-array name = "issue_urgency_array">
+        <item name="high_urgency">High</item>
+        <item name="normal_urgency">Normal</item>
+        <item name="low_urgency">Low</item>
+    </string-array>
+    <string name="button_capture_image">Capture Image</string>
+    <string name="hint_issue_description">Description</string>
+    <string name="button_submit_issue">Submit</string>
 
 </resources>
