--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">inSITe</string>
     <string name="title_section1">Pending</string>
     <string name="title_section2">In Progress</string>
     <string name="title_section3">Resolved</string>
-    <string name="btn_issue">Raise Issue</string>
+    <string name="page_name_report">Report Issue</string>
+    <string name="page_name_view">View Issue</string>
+
     <string name="action_new_issue">Report issue</string>
     <string name="list_empty">No data is loaded.</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_camera">CameraActivity</string>
 
+    <string name="header_issue">Report an issue</string>
+    <string name="header_detail">Describe the issue</string>
+    <string name="header_contact">Your contact</string>
+
+    <string name="hint_issue_title">Issue Title</string>
+    <string name="hint_location">Location</string>
+    <string name="label_urgency">Urgency</string>
+    <string name="hint_reporter">Your Name</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_contact">Contact</string>
+
+    <string-array name="urgency_array">
+        <item name="verylow_urgency">Very Low</item>
+        <item name="low_urgency">Low</item>
+        <item name="normal_urgency">Normal</item>
+        <item name="high_urgency">High</item>
+        <item name="veryhigh_urgency">Very High</item>
+    </string-array>
+
+    <string name="button_capture_image">Capture Image</string>
+    <string name="hint_description">Description</string>
+    <string name="button_submit_issue">Submit</string>
+
+    <string name="error_title">Please provide a title.</string>
+    <string name="error_location">Please provide a location name.</string>
+    <string name="error_description">Please provide the description of the issue.</string>
+
+    <string name="label_issue_title">Title: </string>
+    <string name="label_date">Date Reported: </string>
+    <string name="label_time">Time Reported: </string>
+    <string name="label_location">Location: </string>
+    <string name="label_description">Description: </string>
+    <string name="label_reporter">Your Name: </string>
+    <string name="label_email">Email: </string>
+    <string name="label_contact">Contact: </string>
+    <string name="label_status">Status: </string>
+    <string name="label_status_comment">Status Comment: </string>
+
+    <string name="action_settings">Settings</string>
 </resources>
