--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_section3">Resolved</string>
     <string name="page_name_report">Report Issue</string>
     <string name="page_name_view">View Issue</string>
+    <string name="title_activity_settings">Contact Setting</string>
 
     <string name="action_new_issue">Report issue</string>
     <string name="list_empty">No data is loaded.</string>
@@ -19,7 +20,7 @@
     <string name="label_urgency">Urgency</string>
     <string name="hint_reporter">Your Name</string>
     <string name="hint_email">Email</string>
-    <string name="hint_contact">Contact</string>
+    <string name="hint_contact">Settings</string>
 
     <string-array name="urgency_array">
         <item name="verylow_urgency">Very Low</item>
